Change content headlines to h3 style, prevent images from bleed

--- a/assets/css/src/wizard/base.css
+++ b/assets/css/src/wizard/base.css
@@ -6,6 +6,7 @@
 		--mdc-theme-primary: var(--mtb-wizard-primary-color);
 	}
 
+	& h3,
 	& h4 {
 		margin-top: 0;
 	}
