--- a/assets/css/src/wizard/content.css
+++ b/assets/css/src/wizard/content.css
@@ -21,4 +21,8 @@
 	& .material-wizard__title {
 		margin-top: 0;
 	}
+
+	& .material-wizard__card img {
+		width: 100%;
+	}
 }
